@@ -6,7 +6,7 @@ Microsoft Developer Studio Workspace File, Format Version 6.00
 # this file will be lost the next time it is generated.
 #
 # MPC Command:
-# /tao_builds/chad/doc/build/linux/ACE/bin/mwc.pl -include config -type vc6 -recurse -name_modifier "*_testing"
+# /tao_builds/chad/ocitao/ACE_wrappers/build/linux/bin/mwc.pl -include config -type vc6 -recurse -name_modifier "*_testing"
 
 ###############################################################################
 
